# TCOAALBrowserLoader

./: .gitmodules  CNAME  README.md  build-jsond-mod.js  build-tomb-mod.js  build-tomb-translation.js  dedup-mods.js  extract-cld.js  generate-manifests.js  mods.json  parse-tree.js  server.js
.github/workflows/: deploy-android.yml  deploy-desktop.yml  deploy-web.yml  deploy.yml
android/: README.md  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/androidTest/assets/fixture/: index.html  sw.js
android/app/src/main/: AndroidManifest.xml
android/app/src/main/assets/: save-sync.js
android/app/src/main/res/values/: strings.xml  themes.xml
android/app/src/main/res/xml/: backup_rules.xml  data_extraction_rules.xml  (+1 more)
app/: custom-mods.html  expected-files.json  index.html  loader.html  lock.html  lock.json  manifest.webmanifest  migrate-incoming.html  migrate.html  modding.html  robots.txt  sitemap.xml  sw.js
app/js/libs/: achievements-shim.js  browser-shim.js  lang-format.js  lang-shim.js  mod-runtime-worker.js  mod-runtime.js
mods/_MessageBacklog/www/js/plugins/: YEP_X_MessageBacklog.js
mods/_mouseControl/www/js/plugins/: MouseControl.js
mods/_seamlessMaps/www/js/plugins/: SeamlessMaps.js
mods/_unlockAll/www/js/plugins/: UnlockAll.js
mods/_virtualController/www/js/plugins/: VirtualController.js
tools/: _canvas-browser.js  _crypto-browser.js  _fs-browser.js  _stream-browser.js  _url-browser.js  _zlib-browser.js  build-map-name-keys.js  build-tomb-mod.js  build-tomb-translation.js  build.sh  decode.js  dedup-mods.js  extract-cld.js  extract-project.js  generate-manifests.js  lang-roundtrip.js  map-filenames.json  map-name-keys.json  map-names.js  mod-runtime.js  pack-project.js  parse-tree.js  play.js  share-project.js  tcoaal-versions.json  update-game-manifest-ids.js
tools/desktop/: Cargo.toml  README.md
tools/desktop/core/: Cargo.toml
tools/desktop/core/src/: lib.rs
tools/desktop/creator/src-tauri/: Cargo.toml  tauri.conf.json
tools/desktop/creator/src-tauri/capabilities/: default.json
tools/desktop/creator/src-tauri/src/: main.rs
tools/desktop/creator/ui/: index.html
tools/desktop/user/src-tauri/: Cargo.toml  tauri.conf.json
tools/desktop/user/src-tauri/capabilities/: default.json
tools/desktop/user/src-tauri/src/: main.rs
tools/desktop/user/ui/: index.html
tools/playerbundle/: PlayInBrowser.js
tools/scripts/: build-mod-runtime.js
(+6 files in other folders)
