# TCOAAL Browser Player - desktop apps workspace
# SPDX-License-Identifier: AGPL-3.0-or-later
#
# Two Tauri v2 apps share one node-runner core:
#   creator/ - create a project from a game folder, run it in the browser,
#              pack it, and generate a shareable .tcoaalmod (extract/play/pack/
#              share-project).
#   user/    - install / uninstall a mod onto a game folder, one at a time
#              (share-project apply in place + rollback).
#
# Both bundle a Node runtime (placed under src-tauri/runtime/ by CI) and the
# repo's tools/ + app/js/libs as resources, then shell out to Node to run the
# existing tools - no logic is reimplemented in Rust.

[workspace]
resolver = "2"
members = ["core", "creator/src-tauri", "user/src-tauri"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"
authors = ["kidev"]

[workspace.dependencies]
tauri = { version = "2", features = [] }
tauri-build = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
